# awscli-login

./: .coveragerc  .gitignore  .gitmodules  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  JUNK  LICENSE  MANIFEST.in  Makefile  README.rst  compose.yml  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  setup.py  test.env  test_requirements.txt  tox.ini
.github/workflows/: cicd.yml  reminders.yml
docs/: .gitignore  Makefile  conf.py  index.rst  readme.rst
docs/readme/: body.rst  header.rst  install.pypi.rst  install.test.rst  readme.rst  upgrade.pypi.rst  upgrade.test.rst
scripts/: mk_awscli_login_venv  weekold.py  windows_bat.py
src/awscli_login/: __init__.py  __main__.py  _typing.py  account_names.py  config.py  configure.py  const.py  credentials.py  exceptions.py  logger.py  namespace_passer.py  saml.py  util.py  windaemon.py
src/awscli_login/plugin/: __init__.py  __main__.py  config.py  configure.py  util.py
src/behave/features/: basic.feature
src/idp/: Dockerfile
src/idp/idp-configs/conf/: attribute-filter.xml  (+3 more)
src/integration_tests/: Makefile
src/integration_tests/cassettes/: login.yaml
src/integration_tests/tests/: base.bash  build.bats  clean.bash  common-docker-idp.bash  common.bash  configure.bats  docker-idp-login.bats  duo.bash  login.bats  login_configure.bats  plugin.bats  profiles.bats
src/ldap/: Dockerfile  slapd.conf  users.ldif
src/tests/: base.py  exceptions.py  login.py  test_account_names.py  test_configure.py  test_credentials.py  test_main.py  test_saml.py  test_util.py  util.py
src/tests/cli/: test_get_aws_credentials.py  test_logout.py
src/tests/config/: base.py  test_factor.py  test_get_credentials.py  test_profile.py  test_update.py  util.py
src/tests/data/: authnrequest.xml  error.html  error.xml  success.b64  success.xml
(+3 files in other folders)
