[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "awscli-login"
dynamic = ["version"]
dependencies = [
       "botocore",
       "keyring",
       "lxml",
       "requests",
]
description = "Plugin for the AWS CLI that retrieves and rotates credentials using SAML ECP and STS."
authors = [
  {name = "David D. Riddle", email = "ddriddle@illinois.edu"},
]
readme = "docs/readme.rst"
license = {text = "MIT License"}
keywords = [ "Amazon", "AWS", "SAML", "login", "access", "keys" ]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/techservicesillinois/awscli-login"
"Bug Reports" = "https://github.com/techservicesillinois/awscli-login/issues"
Source = "https://github.com/techservicesillinois/awscli-login"
Changelog = "https://github.com/techservicesillinois/awscli-login/blob/master/CHANGELOG.rst"

[project.optional-dependencies]
test = [
    "awscli",
    "tblib",
    "wurlitzer",
    "vcrpy",
]

[project.scripts]
aws-login = "awscli_login.credentials:main"

[tool.setuptools_scm]
version_file = "src/awscli_login/_version.py"
local_scheme = "dirty-tag"

[tool.setuptools.packages.find]
where = ["src"]
include = ["awscli_login*"]
